--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light  bg-light">
     <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-        <span class="navbar-brand">Christian Matt</span>
+        <a href="/" class="navbar-brand nav-link">Christian Matt</a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
