--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-<div class="wrapper">
+<div>
 
     {%- include navbar.html -%}
 
     <main class="page-content" aria-label="Content">
-        <div class="container-fluid col-md-12 m-0 p-0">
+        <div class="container-fluid col-md-12">
             <div class="row m-0">
-                <div class="col-xl-9 p-0">
-                    <div class="content my-3">
+                <div class="col-xl-9">
+                    <div class="content">
                         <h1>{{ page.title }}</h1>
                         {{ content }}
                     </div>
@@ -26,6 +26,9 @@
             </div>
         </div>
     </main>
+
+    {%- include footer.html -%}
+
 </div>
 </body>
 </html>
