Fix footer and clean up template structure.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,7 +1,11 @@
 
 .page-content {
-  margin: auto;
-  width: 60%;
+  margin: 0 auto;
+  width: 50%;
+}
+
+.link {
+  color: black !important;
 }
 
 @import "bootstrap/bootstrap";
