--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
-<footer class="bg-light text-muted footer">
+<footer class="bg-light text-muted footer mt-auto">
     <div class="text-center p-2">
-        2022 Christian Matt | <a href="/legal.html">Legal Notice</a>
+        2022 Christian Matt | <a href="/legal.html" class="link">Legal Notice</a>
     </div>
 </footer>
