--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{page.title}} | Christian Matt</title>
+    <title>{{page.title}} - Christian Matt</title>
     {%- include header.html -%}
-    <!--<meta itemprop="description" name="description" content="{{ page.description }}" />-->
+    <meta itemprop="description" name="description" content="{{ page.description }}" />
     {% seo %}
 </head>
 
 <body>
-<div>
+<div class="d-flex flex-column min-vh-100">
 
     {%- include navbar.html -%}
 
-    <main class="page-content" aria-label="Content">
+    <main class="page-content mt-3" aria-label="Content">
         <div class="container-fluid col-md-12">
-            <div class="row m-0">
-                <div class="col-xl-9">
+            <div class="row">
+                <div class="col-xl-12">
                     <div class="content">
-                        <h1>{{ page.title }}</h1>
-                        {{ content }}
+                        <h3>{{ page.title }}</h3>
+                        {{content}}
                     </div>
-                </div>
-                <div class="col-xl-3 p-0">
                 </div>
             </div>
         </div>
