Update template structure.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
-<footer class="bg-light text-muted footer mt-auto">
-    <div class="text-center p-2">
+<footer class="bg-dark text-muted footer mt-auto">
+    <div class="text-center p-4">
         2022 Christian Matt | <a href="/legal.html" class="link">Legal Notice</a>
     </div>
 </footer>
