Update navbar and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,16 @@
 
 <footer class="bg-dark text-muted footer mt-auto">
-    <div class="text-center p-4">
-        2022 Christian Matt | <a href="/legal.html" class="link">Legal Notice</a>
+    <div id="social-footer" class="bg-light">
+        <a href="https://www.researchgate.net/profile/Christian-Matt" class="link" target="_blank">ResearchGate</a>
+        <a href="https://scholar.google.com/citations?user=HSsnJNgAAAAJ&hl=en&oi=ao" class="link" target="_blank">Google Scholar</a>
+    </div>
+    <div class="p-4">
+        <div id="author">
+            2022 Christian Matt
+        </div>
+        <div id="footer-links">
+            <a href="/contact.html" class="link">Contact</a>
+            <a href="/legal.html" class="link">Legal Notice</a>
+        </div>
     </div>
 </footer>
