--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light">
     <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
         <a href="/" class="navbar-brand nav-link">Christian Matt</a>
     </div>
@@ -7,7 +7,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav m-auto navbar-center">
             {% for item in site.data.pages %}
                  <a class=" nav-item nav-link" href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}style="color: black;"{% endif %}>
                 {{ item.name }}</a>
