--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,8 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="navbar-nav m-auto navbar-center">
             {% for item in site.data.pages %}
-                 <a class=" nav-item nav-link" href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}style="color: black;"{% endif %}>
-                {{ item.name }}</a>
+                 <a class=" nav-item nav-link {% if page.url == item.link %}active{% endif %}" href="{{ site.baseurl }}{{ item.link }}">{{ item.name }}</a>
             {% endfor %}
         </div>
     </div>
