--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,12 @@
     </div>
     <div class="p-4">
         <div id="author">
-            2022 Christian Matt | Icons by <a href="https://icons8.com/" target="_blank" class="footer link">Icons8</a>
+            2022 Christian Matt
         </div>
         <div id="footer-links">
             <a href="/contact.html" class="footer link">Contact</a>
-            <a href="/legal.html" class="footer link">Legal Notice</a>
+            <a href="/legal.html" class="footer link">Legal Notice</a> |
+            Icons by <a href="https://icons8.com/" target="_blank" class="footer link">Icons8</a>
         </div>
     </div>
 </footer>
