--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,10 +1,12 @@
 
-$content-width: 75%;
+$content-width: 65%;
 $content-width-medium-screen: 85%;
 $content-width-small-screen: 90%;
 $social-footer-padding: 35px;
 $social-icon-margin: 12px;
 $navbar-toggler-margin: 20px;
+$font-size-link-icon: 0.8rem;
+$padding-link-icon: 3px;
 
 * {
   font-family: Helvetica, Georgia, serif ;
@@ -25,8 +27,9 @@ hr {
 }
 
 .rounded-circle {
-  height: 130px;
-  width: 180px;
+  height: 126px;
+  width: 246px;
+  border-radius: 10px !important;
 }
 
 .page-heading {
@@ -44,6 +47,16 @@ a.link {
 
 a.footer.link {
   color:  #6c757d !important;
+}
+
+.icon {
+  padding-left: $padding-link-icon;
+  font-size: $font-size-link-icon;
+}
+
+.icon-contact {
+  padding-right: $padding-link-icon;
+  font-size: $font-size-link-icon;
 }
 
 .social-icon {
