Temporary patch for page titles.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -33,6 +33,11 @@ hr {
   border-radius: 10px !important;
 }
 
+// remove with pushed default
+.page-heading {
+  text-align: center !important;
+}
+
 .h1 {
   text-align: center !important;
 }
