--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="/assets/js/scripts.js"></script>
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png">
