--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,15 +1,21 @@
 
 $content-width: 65%;
 $content-width-medium-screen: 85%;
-$content-width-small-screen: 90%;
+$content-width-small-screen: 98%;
 $social-footer-padding: 35px;
 $social-icon-margin: 12px;
 $navbar-toggler-margin: 20px;
-$font-size-link-icon: 0.8rem;
+$font-size: 1.1rem;
+$font-size-link-icon: 0.8 * $font-size;
 $padding-link-icon: 3px;
 
 * {
-  font-family: Helvetica, Georgia, serif ;
+  font-family: Helvetica, Georgia, serif;
+  font-size: $font-size;
+}
+
+body {
+  overflow: scroll;
 }
 
 .navbar-toggler {
@@ -22,13 +28,13 @@ $padding-link-icon: 3px;
 }
 
 hr {
-  width: 10%;
+  width: 15%;
   margin-left: auto !important;
   margin-right: auto !important;
 }
 
 .rounded-circle {
-  height: 126px;
+  height: 197px;
   width: 246px;
   border-radius: 10px !important;
 }
