--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -30,14 +30,10 @@ hr {
 }
 
 .rounded-circle {
+  padding-top: 10px;
   height: 197px;
   width: 246px;
   border-radius: 10px !important;
-}
-
-// remove with pushed default
-.page-heading {
-  text-align: center !important;
 }
 
 .h1 {
