--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     </div>
     <div class="p-4">
         <div id="author">
-            2022 Christian Matt
+            2022-2023 Christian Matt
         </div>
         <div id="footer-links">
             <a href="/contact.html" class="footer link">Contact</a>
