--- a/_includes/links/external.html
+++ b/_includes/links/external.html
@@ -1,1 +1,1 @@
-<a class="link" target="_blank" href="{{ include.url }}">{{ include.name }}<i class="bi bi-box-arrow-up-right icon-link"></i></a>
+<a class="{% if include.class == "publication-item" %}{{ include.class }}{% else %}link{% endif %}" target="_blank" href="{{ include.url }}">{{ include.name }}<i class="bi bi-box-arrow-up-right icon-link"></i></a>
