--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,7 @@
-<script src="assets/js/jquery-3.5.1.slim.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/js/popper.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/scripts.js"></script>
+<script>
+    setYear();
+</script>
