--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,17 @@
-
-<nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light">
-    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-        <a href="/" class="navbar-brand nav-link">Christian Matt</a>
-    </div>
-    <button id="navbar-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav m-auto">
-            {% for item in site.data.pages %}
-                 <a class="nav-item nav-link {% if page.url == item.link %}active{% endif %}" href="{{ site.baseurl }}{{ item.link }}">{{ item.name }}</a>
-            {% endfor %}
+<nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary navbar-light bg-light px-3">
+    <div class="container-fluid navbar-content">
+        <a class="navbar-brand" href="/">Christian Matt</a>
+        <button id="navbar-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-pressed="false" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
+                {% for item in site.data.pages %}
+                <li class="nav-item">
+                    <a class={% if page.url == item.link %} "nav-link active"{% else %}"nav-link"{% endif %} href="{{ site.baseurl }}{{ item.link }}" >{{ item.name }}</a>
+                </li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
 </nav>
