--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
     {%- include navbar.html -%}
 
-    <main class="page-content my-3" aria-label="Content">
+    <main class="page-content mb-3" aria-label="Content">
         <div class="container-fluid col-md-12">
             <div class="row">
                 <div class="col-xl-12">
