Update consulting & coaching header-image.
-Note: Add lightgrey border around header-images.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -71,6 +71,7 @@ hr {
   margin-top: $margin-header-image;
   height: $image-height;
   width: $image-height * 1.25;
+  border: 1px solid rgba(221, 221, 221, 0.82);
 }
 
 .h1 {
