--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -174,6 +174,8 @@ a.publication-item:hover {
   height: 350px !important;
   width: 100%;
   margin-top: 20px;
+  border-top: $border-custom;
+  border-bottom: $border-custom;
 }
 
 #map-container {
