Scale font sizes on different screen sizes.

--- a/_includes/links/doi.html
+++ b/_includes/links/doi.html
@@ -1,1 +1,1 @@
-, DOI: <a class="publication-item" target="_blank" href="https://doi.org/{{ include.doi }}">{{ include.name }}<i class="bi bi-box-arrow-up-right icon-link"></i></a>
+, DOI: <a class="accordion-list-item" target="_blank" href="https://doi.org/{{ include.doi }}">{{ include.name }}<i class="bi bi-box-arrow-up-right icon-link"></i></a>
