--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary navbar-light bg-light px-3">
+<!--<nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary navbar-light bg-light px-3">
     <div class="container-fluid navbar-content">
         <a class="navbar-brand" href="/">Christian Matt</a>
         <button id="navbar-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-pressed="false" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,6 +6,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ">
+                {% for item in site.data.pages %}
+                <li class="nav-item">
+                    <a class={% if page.url == item.link %} "nav-link active"{% else %}"nav-link"{% endif %} href="{{ site.baseurl }}{{ item.link }}" >{{ item.name }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</nav>-->
+
+<nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Christian Matt</a>
+        <button id="navbar-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% for item in site.data.pages %}
                 <li class="nav-item">
                     <a class={% if page.url == item.link %} "nav-link active"{% else %}"nav-link"{% endif %} href="{{ site.baseurl }}{{ item.link }}" >{{ item.name }}</a>
